--- a/index.html
+++ b/index.html
@@ -101,34 +101,34 @@
                                            <img src="./assets/images/tech-6.jpg">
                                       </div>
                                       <div class="top-story-other">
-                                           <div class="other-story-description-headline pt-2 pb-2">
+                                           <div class="other-story-description-headline  pt-2 pb-2">
                                                <div class="image-story float-start">
                                                    <img src="./assets/images/images-12.jpg">
                                                </div>
                                                <div class="story-details float-end">
-                                                   <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                    <h5><b>Lorem ipsum dolor sit amet, consectetur</b></h5>
                                                    <p>20 March ,2023</p>
                                                </div>
                                            </div>
-                                           <div class="other-story-description-headline pt-2 pb-2">
+                                           <div class="other-story-description-headline  pt-2 pb-2">
                                                 <div class="image-story float-start">
                                                     <img src="./assets/images/news-4.jpg">
                                                 </div>
                                                 <div class="story-details float-end">
-                                                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                    <h5>Lorem ipsum dolor sit amet, consectetur</h5>
                                                     <p>20 March ,2023</p>
                                                 </div>
                                            </div>
-                                           <div class="other-story-description-headline pt-2 pb-2">
+                                           <!--<div class="other-story-description-headline ps-2 pe-2 pt-2 pb-2">
                                                 <div class="image-story float-start">
                                                     <img src="./assets/images/food-4.jpg">
                                                 </div>
                                                 <div class="story-details float-end">
-                                                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                     <h5>Lorem ipsum dolor sit amet, consectetur</h5>
                                                     <p>20 March ,2023</p>
                                                 </div>
 
-                                           </div>
+                                           </div>-->
                                         
                                       </div>
                                </div>
@@ -138,12 +138,12 @@
               </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="container_fluid">
 
                     <div class="aritcles">
                          <div class="articles-sheet">
                               <div class="row">
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4 mt-3  mb-3">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/news-1.jpg">
@@ -216,7 +216,7 @@
         <div class="news-section">
             
 
-              <div class="container-fluid">
+              <div class="container-fluid" id="container_fluid">
 
 
 
@@ -399,10 +399,10 @@
                     </div>
                     <div class="around-the-world">
                          <div class="row">
-                              <div class="col-md-6">
+                              <div class="col-md-6 mb-3">
                                    <div class="around-the-world-main"></div>
                               </div>
-                              <div class="col-md-6">
+                              <div class="col-md-6 mb-3">
                                    <div class="around-the-world-main"></div>
                               </div>
                          </div>
@@ -583,7 +583,7 @@
                                           autoplayTimeout:5500,
                                           responsive:{
                                                0:{
-                                                  items:3,
+                                                  items:2,
                                                 },
                                                 600:{
                                                   items:3
