new battle destoryer ships ordered

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="aritcles">
                          <div class="articles-sheet">
                               <div class="row">
-                                   <div class="col-md-4 mt-3  mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/news-1.jpg">
@@ -153,7 +153,7 @@
                                              </div>
                                         </div>
                                    </div>
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                    <img src="./assets/images/images-3.jpg">
@@ -163,7 +163,7 @@
                                              </div>
                                         </div>
                                    </div>
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/food-2.jpg">
@@ -175,7 +175,7 @@
                                    </div>
                                   
 
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/images-8.jpg">
@@ -185,7 +185,7 @@
                                              </div>
                                         </div>
                                    </div>
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/images-1.jpg">
@@ -195,7 +195,7 @@
                                              </div>
                                         </div>
                                    </div>
-                                   <div class="col-md-4 mt-3 mb-3">
+                                   <div class="col-md-4">
                                         <div class="articles-items">
                                              <div class="articles-items-image">
                                                  <img src="./assets/images/tech-2.jpg">
