--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
                     <div class="news-section-sheet">
                            <div class="row">
-                                <div class="col-md-4 mb-2" id="new_items_sheet">
+                                <div class="col-md-4 " id="new_items_sheet">
                                      <div class="top-story-line">
                                          <img src="./assets/images/agric-1.jpg">
                                      </div>
