--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                                <div class="trending-news">
                                       <div class="top-story">
                                            <img src="./assets/images/tech-6.jpg">
+                                           <div class="top-story-overlay">
+                                                <div class="top-story-text">
+                                                    <span><b>Entertaiment</b></span>
+                                                    <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                </div>
+                                           </div>
                                       </div>
                                       <div class="top-story-other">
                                            <div class="other-story-description-headline  pt-2 pb-2">
@@ -106,8 +112,9 @@
                                                    <img src="./assets/images/images-12.jpg">
                                                </div>
                                                <div class="story-details float-end">
-                                                    <h5><b>Lorem ipsum dolor sit amet, consectetur</b></h5>
-                                                   <p>20 March ,2023</p>
+                                                    <span><b>Entertaiment</b></span>
+                                                    <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   <!--<p>20 March ,2023</p>-->
                                                </div>
                                            </div>
                                            <div class="other-story-description-headline  pt-2 pb-2">
@@ -115,8 +122,9 @@
                                                     <img src="./assets/images/news-4.jpg">
                                                 </div>
                                                 <div class="story-details float-end">
-                                                    <h5>Lorem ipsum dolor sit amet, consectetur</h5>
-                                                    <p>20 March ,2023</p>
+                                                    <span><b>lifestyle</b></span>
+                                                    <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                    <!--<p>20 March ,2023</p>-->
                                                 </div>
                                            </div>
                                            <!--<div class="other-story-description-headline ps-2 pe-2 pt-2 pb-2">
@@ -149,7 +157,9 @@
                                                  <img src="./assets/images/news-1.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 jkjkjkjkjk
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
@@ -159,7 +169,9 @@
                                                    <img src="./assets/images/images-3.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 fkkfkfkfk
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
@@ -169,7 +181,9 @@
                                                  <img src="./assets/images/food-2.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 sddsdsds
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
@@ -181,7 +195,9 @@
                                                  <img src="./assets/images/images-8.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 ggkjgkjg
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
@@ -191,7 +207,9 @@
                                                  <img src="./assets/images/images-1.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 fkfkfkfk
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
@@ -201,7 +219,9 @@
                                                  <img src="./assets/images/tech-2.jpg">
                                              </div>
                                              <div class="articles-items-body">
-                                                 ggkggkjk
+                                                   <div class="articles-items-overlay-text">
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                   </div>
                                              </div>
                                         </div>
                                    </div>
