--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                          <span><b>news</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
@@ -170,6 +171,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                          <span><b>lifestyle</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
@@ -182,6 +184,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                     <span><b>lifestyle</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
@@ -196,6 +199,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                     <span><b>lifestyle</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
@@ -208,6 +212,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                         <span><b>lifestyle</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
@@ -220,6 +225,7 @@
                                              </div>
                                              <div class="articles-items-body">
                                                    <div class="articles-items-overlay-text">
+                                                     <span><b>technology</b></span>
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
                                                    </div>
                                              </div>
