--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                                                        <img src="./assets/images/agric-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -266,7 +267,7 @@
                                                        <img src="./assets/images/agric-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -274,7 +275,7 @@
                                                        <img src="./assets/images/agric-3.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -282,7 +283,7 @@
                                                        <img src="./assets/images/food-4.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
 
@@ -298,7 +299,7 @@
                                                        <img src="./assets/images/tech-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -306,7 +307,7 @@
                                                          <img src="./assets/images/tech-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -314,8 +315,7 @@
                                                         <img src="./assets/images/tech-6.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
-                                                   </div>                                               
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>                                                   </div>                                               
 
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -323,7 +323,7 @@
                                                        <img src="./assets/images/tech-7.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                           <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                   
@@ -339,7 +339,7 @@
                                                          <img src="./assets/images/news-4.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -347,7 +347,7 @@
                                                         <img src="./assets/images/news-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -355,7 +355,7 @@
                                                         <img src="./assets/images/ad-7.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -363,7 +363,7 @@
                                                         <img src="./assets/images/news-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-                                                       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>                                       
 
@@ -391,7 +391,7 @@
                                                  <img src="./assets/images/news-2.jpg">
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                             </div>
                                      </div>
                                      <div class="new-trends">
@@ -399,7 +399,7 @@
                                                 <img src="./assets/images/agric-2.jpg">
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                             </div>                                         
                                      </div>
                                      <div class="new-trends">
@@ -408,7 +408,7 @@
                                                 <img src="./assets/images/food-1.jpg">
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                             </div>
                                      </div>
                                      <div class="new-trends">
@@ -416,7 +416,7 @@
                                                 <img src="./assets/images/lifestyle-1.jpg">
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                             </div>                                         
                                      </div>
                               </div>
