am great byeee byeee oooo

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                                    <div class="main-stories-headline float-end">
                                                         <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -411,8 +411,14 @@
                                      <div class="new-trends">
                                             <div class="new-trends-video float-start">
                                                  <img src="./assets/images/news-2.jpg">
+                                                 <div class="play-icon-overlay">
+                                                       <div class="paly">
+                                                           fkfkfk
+                                                       </div>
+                                                 </div>
                                             </div>
                                             <div class="new-trends-caption float-end">
+                                                <span>12th March  2023</span>
                                                 <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                             </div>
                                      </div>
