minebye byeooo boi yoo

--- a/index.html
+++ b/index.html
@@ -413,38 +413,61 @@
                                                  <img src="./assets/images/news-2.jpg">
                                                  <div class="play-icon-overlay">
                                                        <div class="paly">
-                                                           fkfkfk
+                                                           <i class="fas fa-play"></i>
                                                        </div>
                                                  </div>
                                             </div>
                                             <div class="new-trends-caption float-end">
                                                 <span>12th March  2023</span>
-                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                             </div>
                                      </div>
                                      <div class="new-trends">
                                             <div class="new-trends-video float-start">
                                                 <img src="./assets/images/agric-2.jpg">
+
+                                                 <div class="play-icon-overlay">
+                                                       <div class="paly">
+                                                           <i class="fas fa-play"></i>
+                                                       </div>
+                                                 </div>                                                
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                <span>12th March  2023</span>
+                                                <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                             </div>                                         
                                      </div>
                                      <div class="new-trends">
                                          
                                             <div class="new-trends-video float-start">
                                                 <img src="./assets/images/food-1.jpg">
+
+                                                 <div class="play-icon-overlay">
+                                                       <div class="paly">
+                                                           <i class="fas fa-play"></i>
+                                                       </div>
+                                                 </div>
+
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                <span>12th March  2023</span>
+                                                <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                             </div>
                                      </div>
                                      <div class="new-trends">
                                             <div class="new-trends-video float-start">
                                                 <img src="./assets/images/lifestyle-1.jpg">
+
+                                                 <div class="play-icon-overlay">
+                                                       <div class="paly">
+                                                           <i class="fas fa-play"></i>
+                                                       </div>
+                                                 </div>
+
                                             </div>
                                             <div class="new-trends-caption float-end">
-                                                <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                <span>12th March  2023</span>
+                                                <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                             </div>                                         
                                      </div>
                               </div>
