--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                </div>
          </div> 
-         <div class="modal" id="mobile_nav">
+         <div class="modal fade sidebar" id="mobile_nav">
                 <div class="modal-dialog modal-fullscreen">
                       <div class="modal-content">
                             <div class="modal-header">
